Trying with android_home

--- a/local.properties
+++ b/local.properties
@@ -5,5 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Aug 19 15:12:55 BRT 2019
-ndk.dir=/Users/Nicolas/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/Nicolas/Library/Android/sdk
+ndk.dir=$ANDROID_NDK_HOME
+sdk.dir=$ANDROID_HOME
