--- a/local.properties
+++ b/local.properties
@@ -5,5 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Aug 19 15:12:55 BRT 2019
-ndk.dir=$ANDROID_NDK_HOME
-sdk.dir=$ANDROID_HOME
+#ndk.dir=$ANDROID_NDK_HOME
+#sdk.dir=$ANDROID_HOME
