test with fastlane

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,9 @@ jobs:
           name: Run Tests
           #          command: ./gradlew lint test
           command: ./gradlew test
+      - run:
+          name: Fastlane gym
+          command: fastlane gym
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/reports
           destination: reports
