--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,7 @@
 version: 2
 references:
   ## Workspaces
-  workspace: &workspace
-    ~/code
+  workspace: &workspace ~/code
 
   ## Docker image configurations
   android_config: &android_config
@@ -15,11 +14,9 @@ references:
       GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m"'
 
   ## Cache
-  gradle_key: &gradle_key
-    jars-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
+  gradle_key: &gradle_key jars-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
 
-  gems_key: &gems_key
-    gems-{{ checksum "Gemfile.lock" }}
+  gems_key: &gems_key gems-{{ checksum "Gemfile.lock" }}
 
   restore_gradle_cache: &restore_gradle_cache
     restore_cache:
@@ -54,6 +51,7 @@ references:
       command: ./gradlew androidDependencies
 
 jobs:
+  #Run the test
   test_unit:
     <<: *android_config
     steps:
@@ -73,7 +71,7 @@ jobs:
           command: ./gradlew test
       - run:
           name: Fastlane upload build to Appcenter
-          command: fastlane upload_build_to_appcenter    
+          command: fastlane upload_build_to_appcenter
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/reports
           destination: reports
@@ -81,7 +79,7 @@ jobs:
           path: app/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
 
-jobs:
+  #Deploy to appcenter
   deploy_appcenter:
     <<: *android_config
     steps:
@@ -97,14 +95,13 @@ jobs:
           command: sudo bundle install
       - run:
           name: Fastlane upload build to Appcenter
-          command: fastlane upload_build_to_appcenter    
+          command: fastlane upload_build_to_appcenter
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/reports
           destination: reports
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: app/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
-
 
 workflows:
   version: 2
