Added sudo to fastlane command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ jobs:
           command: sudo bundle install
       - run:
           name: Fastlane upload build to Appcenter
-          command: fastlane upload_build_to_appcenter
+          command: sudo fastlane upload_build_to_appcenter
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/reports
           destination: reports
