Added bundle exec

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
           command: ./gradlew test
       - run:
           name: Fastlane upload build to Appcenter
-          command: fastlane upload_build_to_appcenter
+          command: bundle exec fastlane upload_build_to_appcenter
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: app/build/reports
           destination: reports
