--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,6 @@ references:
     docker:
       - image: circleci/android:api-28-alpha
     environment:
-      BUNDLER_VERSION: 2.0.1
       TERM: dumb
       _JAVA_OPTIONS: "-Xmx3200m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
       GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx3200m"'
@@ -44,7 +43,7 @@ references:
   ruby_dependencies: &ruby_dependencies
     run:
       name: Download Ruby Dependencies
-      command: gem update --system || gem install bundler || bundle check || bundle install --path vendor/bundle
+      command: bundle check || bundle install --path vendor/bundle
 
   android_dependencies: &android_dependencies
     run:
