--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,11 @@ references:
   ## Dependencies
   ruby_dependencies: &ruby_dependencies
     run:
+      name: Bundler 2.0
+      command: 
+        gem update --system
+        bundle update --bundler
+    run:
       name: Download Ruby Dependencies
       command: bundle check || bundle install --path vendor/bundle
 
