--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,13 +42,8 @@ references:
   ## Dependencies
   ruby_dependencies: &ruby_dependencies
     run:
-      name: Bundler 2.0
-      command: 
-        gem update --system
-        bundle update --bundler
-    run:
       name: Download Ruby Dependencies
-      command: bundle check || bundle install --path vendor/bundle
+      command: gem update --system || bundle update --bundler || bundle check || bundle install --path vendor/bundle
 
   android_dependencies: &android_dependencies
     run:
