--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,9 +44,11 @@ references:
     run:
       name: Download Ruby Dependencies
       command: |
-        gem update --system
-        gem install bundler
-        bundle update --bundler
+        sudo gem update --system
+        sudo gem uninstall bundler
+        sudo rm /usr/local/bin/bundle
+        sudo rm /usr/local/bin/bundler
+        sudo gem install bundler
         bundle check
         bundle install --path vendor/bundle
 
