--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,11 +44,11 @@ references:
     run:
       name: Download Ruby Dependencies
       command: |
-        sudo gem update --system
-        sudo gem uninstall bundler
-        sudo rm /usr/local/bin/bundle
-        sudo rm /usr/local/bin/bundler
-        sudo gem install bundler
+        gem update --system
+        gem uninstall bundler
+        gem install bundler
+        bundle install
+        bundle update --bundler
         bundle check
         bundle install --path vendor/bundle
 
