--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2
 references:
   ## Workspaces
   workspace: &workspace ~/src
+  BUNDLER_VERSION: 2.0.2
 
   ## Docker image configurations
   android_config: &android_config
@@ -44,11 +45,7 @@ references:
     run:
       name: Download Ruby Dependencies
       command: |
-        gem uninstall -aIx bundler
-        gem install bundler
-        bundle install
-        bundle update --bundler
-        bundle check
+        gem install bundler --version $BUNDLER_VERSION
         bundle install --path vendor/bundle
 
   android_dependencies: &android_dependencies
