--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,12 +96,32 @@ jobs:
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: app/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+  jobs:
+  build_and_distribute:
+    <<: *android_config
+    steps:
+      - checkout
+      - *restore_gradle_cache
+      - *restore_gems_cache
+      - *ruby_dependencies
+      - *android_dependencies
+      - *save_gradle_cache
+      - *save_gems_cache
+      - run:
+          name: Generate a new build an distribute it
+          command: bundle exec fastlane build_and_distribute build_type:<<parameters.build_type>> flavor:<<parameters.flavor>>
 
 workflows:
   version: 2
   workflow:
     jobs:
-      - test_unit
-      - deploy_appcenter:
-          requires:
-            - test_unit
+      - build_and_distribute:
+          filters:
+            branches:
+              only:
+                - stage
+                - release_candidate
+                - att_stage
+                - att_release_candidate
+                - golfbook_stage
+                - golfbook_release_candidate
