--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,11 +109,16 @@ jobs:
       - *save_gems_cache
       - run:
           name: Generate a new build an distribute it
-          command: bundle exec fastlane build_and_distribute build_type:<<parameters.build_type>> flavor:<<parameters.flavor>>
+          command: bundle exec fastlane build_and_distribute build_type:<<parameters.build_type>> flavor:<<parameters.flavor>>    
 
 workflows:
   version: 2
   workflow:
+    jobs:
+      - test_unit
+      - deploy_appcenter:
+          requires:
+            - test_unit
     jobs:
       - build_and_distribute:
           filters:
@@ -124,4 +129,4 @@ workflows:
                 - att_stage
                 - att_release_candidate
                 - golfbook_stage
-                - golfbook_release_candidate
+                - golfbook_release_candidate        
