--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,4 +71,13 @@ workflows:
   version: 2
   workflow:
     jobs:
-      - build_and_distribute
+      - build_and_distribute:
+          filters:
+            branches:
+              only:
+                - stage
+                - release_candidate
+                - att_stage
+                - att_release_candidate
+                - golfbook_stage
+                - golfbook_release_candidate
