--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,12 +46,13 @@ references:
       command: |
         gem install bundler --version 2.0.2
         bundle install --path vendor/bundle
-​
+
   android_dependencies: &android_dependencies
     run:
       name: Download Android Dependencies
       command: ./gradlew androidDependencies
 
+jobs:
   build_and_distribute:
     <<: *android_config
     steps:
